# Monodepth2.jl

./: .gitignore  CMakeLists.txt  Manifest.toml  Project.toml  README.md  script.jl
.github/workflows/: cmake.yml
scripts/: Manifest.toml  Project.toml  inference.jl  script.jl  supervised_training.jl
scripts/bilateral_guided_filtering/: Manifest.toml  Project.toml  bilateral_guided_filtering.jl  convert_depth_maps.jl
src/: Monodepth.jl  dchain.jl  depth_decoder.jl  dtk.jl  io_utils.jl  kitty.jl  mixer.c  model.jl  nyudataset.jl  pose_decoder.jl  render.jl  repeat.jl  simple_depth.jl  supervisedKITTI.jl  test.jl  test2.jl  training.jl  utils.jl
src/datasets/: nyudataset.jl  supervised_dense_KITTI.jl
test/: Manifest.toml  Project.toml  bilateral_guided_depth.jl  python_tests.jl  runtests.jl  test_get_src_from_plane_disparity.jl  test_get_tgt_xyz_from_plane_disparity.jl  test_loss_per_scale.jl  test_plane_volume_rendering.jl  test_render_tgt_rgb_depth.jl  test_sample.jl  tiff_opener_test.ipynb
